# KNN-Coursera

./: .replit  AggClustering.py  Blank.numbers  Decision-Trees_Lab.ipynb  Decision_Tree.py  K-means_clustets.ipynb  KNN Lab.ipynb  KNN Lab.py  LogisticRegression Lab.ipynb  MEmory.py  ML0101EN-Clas-Decision-Trees-drug-py-v1.ipynb  ML0101EN-Clas-K-Nearest-neighbors-CustCat-py-v1.ipynb  SVM_Lab.ipynb  Test.py  pyproject.toml  test.py
